<resources>
    <string name="app_name">HealthAppY</string>
    <string name="title_activity_mealmanagment">mealmanagement</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open"> Open Navigation Drawer</string>
    <string name="close"> Close Navigation Drawer</string>

    <string name="send_reset_mail">Send reset mail</string>
    <string name="email">Email</string>
    <string name="we_will_send_you_an_e_mail_with_instructions_to_reset_your_password">We will send you an e-mail with instructions to reset your password.</string>
    <string name="password_recovery">Password recovery</string>
    <string name="password">Password</string>
    <string name="remember">Remember me</string>
    <string name="login">Log In</string>
    <string name="password_forgot">Forgot password?</string>
    <string name="welcome">Welcome To</string>
    <string name="health_care">Health Care</string>
    <string name="signup">Sign Up</string>
    <string name="swedish">Svenska</string>
    <string name="english">English</string>
    <string name="language">Language:</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password_re">Re-Password</string>
    <string name="phone_number">Phone number</string>
    <string name="emergency_number">Emergency Number</string>
    <string name="email_us">Email Us On</string>
    <string name="select_date">Select the Date</string>
    <string name="edit">Edit</string>
    <string name="address">Address</string>
    <string name="home">Home</string>
    <string name="meal_managment">Meal Management</string>
    <string name="profile">Profile</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="log_out">Log Out</string>
    <string name="contact_us">Contact us</string>
    <string name="call_us">Call us</string>
    <string name="mail_us">Mail us</string>
    <string name="select">Select A Meal</string>

    <string name="enter_day">Enter day, eg: 2023/09/29</string>
    <string name="enter_time">Enter time, eg: 01:02</string>
    <string name="the_food_is">The food is…</string>
    <string name="save">Save</string>
    <string name="signup_elderly">Signup Elderly</string>
    <string name="toast_enter_email">Enter Email</string>
    <string name="toast_email_sent">Email sent.</string>
    <string name="toast_enter_password">Enter Password</string>
    <string name="toast_add_data">Add some data:</string>
    <string name="toast_email_verification_sent">Email verification sent.</string>
    <string name="toast_data_added">Data added</string>
    <string name="toast_data_fail">"Fail to add data "</string>
    <string name="toast_login_success">Login Successful</string>
    <string name="toast_auth_fail">Authentication failed.</string>
    <string name="toast_button_pressed">Button pressed</string>
    <string name="toast_reenter_password">Reenter Password</string>
    <string name="toast_passwords_do_not_match">Passwords do not match!</string>
    <string name="toast_enter_name">Enter a name</string>
    <string name="toast_enter_phone_number">Enter a phone number:</string>
    <string name="languages">Languages</string>
    <string name="select_language">Select Language</string>
    <string name="set_language_to">Set language to:</string>

    <string name="meal_history">Meal History</string>

    <string name="_4_digit_pin">4 digit PIN</string>
    <string name="username">Username</string>
    <string name="to_apply_yourself_as_garegiver">to apply yourself as garegiver</string>
    <string name="enter_elder_username">Enter Elder username</string>
    <string name="link_elder">Link Elder</string>
    <string name="get_account_info">Get account info</string>
    <string name="plan_a_meal">Plan a meal</string>
    <string name="about_the_app">About the app</string>
    <string name="pick_date">Pick date</string>
    <string name="pick_time">Pick Time</string>
    <string name="select_elder">Select Elder</string>
    <string name="add_meal_comment">Add meal comment…</string>
    <string name="lol">Health Care is a cutting-edge mobile application developed to address the specific meal management needs of the elderly population. We recognize that as we age, maintaining a balanced diet is crucial to our overall well-being.</string>
    <string name="lool">Health Care has been meticulously crafted to provide elderly population the help they need to eat their meals effectively, ensuring they can lead healthier.</string>
    <string name="helping_you_to_take_good_care_of_your_elderly">Helping you to take good care of your elderly</string>
    <string name="all_the_elderly_deserves_some_care_and_love">All the elderly deserves some care and love</string>
    <string name="get_started">Get Started</string>
    <string name="settings">Settings</string>
    <string name="change_your_basic_account_settings_here">Change your basic account settings here.</string>
    <string name="your_username">Your username:</string>
    <string name="your_email_adress">Your email adress:</string>
    <string name="your_number">Your number:</string>
    <string name="your_password">Your password:</string>
    <string name="save_changes">Save changes</string> 
    <string name="elderly_signup">Elderly SignUp</string>
    <string name="your_name">Your name:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="do_you_want_to_log_out">Do you want to log out?</string>
    <string name="edit_a_meal">Edit a meal</string>
    <string-array name="meals">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Snack</item>
        <item>Dinner</item>
    </string-array>
    <string-array name="langs">
        <item>English</item>
        <item>Svenska</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Notification Stuff-->
    <string name="permission_request">Permission(s) requried</string>
    <string name="notif_post_perm">To be able to show you important information outside of the app.</string>
    <string name="perm_accept">Accept!</string>
    <string name="perm_deny">Deny!</string>

    <!-- FragmentMealHistory -->
    <string name="select_elderly">Select Elderly</string>

    <!-- Service Notification stuff -->
    <string name="missed_meal">Missed Meal!</string>
    <string name="missed_meal_info">missed their meal!</string>
    <string name="crit_meal_alert">Critical Meal Alert!</string>
    <string name="crit_meal_alert_info">is about to miss their meal!</string>
    <string name="medium_meal_alert">Meal Alert</string>
    <string name="medium_meal_alert_info">is late to their meal.</string>
    <string name="early_meal_alert">Meal Reminder</string>
    <string name="early_meal_alert_info">is due for their meal.</string>



</resources>
