<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"

        android:gravity="center"
        android:text="@string/enter_elder_username"
        android:textColor="@color/black"
        android:textSize="32dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/instructionsdetail"
        android:layout_below="@+id/instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/to_apply_yourself_as_garegiver"
        android:textColor="@color/black"
        android:textSize="20dp"
         />

    <EditText
        android:id="@+id/username"
        android:layout_below="@+id/instructionsdetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/blue"
        android:drawableLeft="@drawable/baseline_person_outline_24"
        android:drawablePadding="20dp"
        android:hint="@string/username"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/linkbtn"
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        android:text="@string/get_account_info" />




</RelativeLayout>